// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Component Test Loads login callback components with extra query parameters in the URL Removes tree resumption query parameters when returning from a redirect: console-warn-snapshot 1`] = `
[
  [
    "[Vue warn]: (deprecation COMPONENT_FUNCTIONAL) Functional component <BContainer> should be defined as a plain function in Vue 3. The "functional" option has been removed. NOTE: Before migrating to use plain functions for functional components, first make sure that all async components usage have been migrated and its compat behavior has been disabled.
  Details: https://v3-migration.vuejs.org/breaking-changes/functional-components.html",
    "
",
    " at <Login",
    "ref="VTU_COMPONENT"",
    ">",
    "
",
    " at <VTUROOT>",
  ],
  [
    "[Vue warn]: (deprecation INSTANCE_LISTENERS) vm.$listeners has been removed. In Vue 3, parent v-on listeners are included in vm.$attrs and it is no longer necessary to separately use v-on="$listeners" if you are already using v-bind="$attrs". (Note: the Vue 3 behavior only applies if this compat config is disabled)
  Details: https://v3-migration.vuejs.org/breaking-changes/listeners-removed.html",
    "
",
    " at <BContainer",
    "class="flex-grow-1 d-flex"",
    ">",
    "
",
    " at <Login",
    "ref="VTU_COMPONENT"",
    ">",
    "
",
    " at <VTUROOT>",
  ],
  [
    "[Vue warn]: (deprecation GLOBAL_EXTEND) (3)",
    "
",
    " at <CenterCard",
    "logo-alt-text="common.logo"",
    "logo-enabled=true",
    "logo-height="40"",
    " ...",
    ">",
    "
",
    " at <BCol",
    "lg=12",
    ">",
    "
",
    " at <BRow",
    "class="align-items-center m-0 flex-grow-1"",
    ">",
    "
",
    " at <BContainer",
    "class="flex-grow-1 d-flex"",
    ">",
    "
",
    " at <Login",
    "ref="VTU_COMPONENT"",
    ">",
    "
",
    " at <VTUROOT>",
  ],
  [
    "[Vue warn]: (deprecation COMPONENT_FUNCTIONAL) (2)",
    "
",
    " at <CenterCard",
    "logo-alt-text="common.logo"",
    "logo-enabled=true",
    "logo-height="40"",
    " ...",
    ">",
    "
",
    " at <BCol",
    "lg=12",
    ">",
    "
",
    " at <BRow",
    "class="align-items-center m-0 flex-grow-1"",
    ">",
    "
",
    " at <BContainer",
    "class="flex-grow-1 d-flex"",
    ">",
    "
",
    " at <Login",
    "ref="VTU_COMPONENT"",
    ">",
    "
",
    " at <VTUROOT>",
  ],
  [
    "[Vue warn]: (deprecation INSTANCE_LISTENERS) (2)",
    "
",
    " at <BCard",
    "no-body=""",
    "class="border-xs-0 border-sm d-flex fr-stretch-card"",
    "header-tag="header"",
    " ...",
    ">",
    "
",
    " at <BContainer",
    "class="px-0 flex-grow-1 d-flex"",
    ">",
    "
",
    " at <CenterCard",
    "logo-alt-text="common.logo"",
    "logo-enabled=true",
    "logo-height="40"",
    " ...",
    ">",
    "
",
    " at <BCol",
    "lg=12",
    ">",
    "
",
    " at <BRow",
    "class="align-items-center m-0 flex-grow-1"",
    ">",
    "
",
    " at <BContainer",
    "class="flex-grow-1 d-flex"",
    ">",
    "
",
    " at <Login",
    "ref="VTU_COMPONENT"",
    ">",
    "
",
    " at <VTUROOT>",
  ],
  [
    "[Vue warn]: (deprecation INSTANCE_LISTENERS) (3)",
    "
",
    " at <BCardHeader",
    "class="d-flex align-items-center flex-fill login-header"",
    ">",
    "
",
    " at <BCard",
    "no-body=""",
    "class="border-xs-0 border-sm d-flex fr-stretch-card"",
    "header-tag="header"",
    " ...",
    ">",
    "
",
    " at <BContainer",
    "class="px-0 flex-grow-1 d-flex"",
    ">",
    "
",
    " at <CenterCard",
    "logo-alt-text="common.logo"",
    "logo-enabled=true",
    "logo-height="40"",
    " ...",
    ">",
    "
",
    " at <BCol",
    "lg=12",
    ">",
    "
",
    " at <BRow",
    "class="align-items-center m-0 flex-grow-1"",
    ">",
    "
",
    " at <BContainer",
    "class="flex-grow-1 d-flex"",
    ">",
    "
",
    " at <Login",
    "ref="VTU_COMPONENT"",
    ">",
    "
",
    " at <VTUROOT>",
  ],
  [
    "[Vue warn]: (deprecation INSTANCE_LISTENERS) (4)",
    "
",
    " at <BCardBody",
    "key=1",
    "aria-live="polite"",
    ">",
    "
",
    " at <BCard",
    "no-body=""",
    "class="border-xs-0 border-sm d-flex fr-stretch-card"",
    "header-tag="header"",
    " ...",
    ">",
    "
",
    " at <BContainer",
    "class="px-0 flex-grow-1 d-flex"",
    ">",
    "
",
    " at <CenterCard",
    "logo-alt-text="common.logo"",
    "logo-enabled=true",
    "logo-height="40"",
    " ...",
    ">",
    "
",
    " at <BCol",
    "lg=12",
    ">",
    "
",
    " at <BRow",
    "class="align-items-center m-0 flex-grow-1"",
    ">",
    "
",
    " at <BContainer",
    "class="flex-grow-1 d-flex"",
    ">",
    "
",
    " at <Login",
    "ref="VTU_COMPONENT"",
    ">",
    "
",
    " at <VTUROOT>",
  ],
  [
    "[Vue warn]: (deprecation GLOBAL_EXTEND) (4)",
    "
",
    " at <Alert",
    "show=false",
    "dismissible=false",
    "variant="error"",
    " ...",
    ">",
    "
",
    " at <BCardBody",
    "key=0",
    "tabindex="-1"",
    "id="callbacksPanel"",
    " ...",
    ">",
    "
",
    " at <BCard",
    "no-body=""",
    "class="border-xs-0 border-sm d-flex fr-stretch-card"",
    "header-tag="header"",
    " ...",
    ">",
    "
",
    " at <BContainer",
    "class="px-0 flex-grow-1 d-flex"",
    ">",
    "
",
    " at <CenterCard",
    "logo-alt-text="common.logo"",
    "logo-enabled=true",
    "logo-height="40"",
    " ...",
    ">",
    "
",
    " at <BCol",
    "lg=12",
    ">",
    "
",
    " at <BRow",
    "class="align-items-center m-0 flex-grow-1"",
    ">",
    "
",
    " at <BContainer",
    "class="flex-grow-1 d-flex"",
    ">",
    "
",
    " at <Login",
    "ref="VTU_COMPONENT"",
    ">",
    "
",
    " at <VTUROOT>",
  ],
  [
    "[Vue warn]: (deprecation RENDER_FUNCTION) (2)",
    "
",
    " at <BAlert",
    "class="fr-alert p-3 text-left"",
    "dismissible=false",
    "fade=true",
    " ...",
    ">",
    "
",
    " at <Alert",
    "show=false",
    "dismissible=false",
    "variant="error"",
    " ...",
    ">",
    "
",
    " at <BCardBody",
    "key=0",
    "tabindex="-1"",
    "id="callbacksPanel"",
    " ...",
    ">",
    "
",
    " at <BCard",
    "no-body=""",
    "class="border-xs-0 border-sm d-flex fr-stretch-card"",
    "header-tag="header"",
    " ...",
    ">",
    "
",
    " at <BContainer",
    "class="px-0 flex-grow-1 d-flex"",
    ">",
    "
",
    " at <CenterCard",
    "logo-alt-text="common.logo"",
    "logo-enabled=true",
    "logo-height="40"",
    " ...",
    ">",
    "
",
    " at <BCol",
    "lg=12",
    ">",
    "
",
    " at <BRow",
    "class="align-items-center m-0 flex-grow-1"",
    ">",
    "
",
    " at <BContainer",
    "class="flex-grow-1 d-flex"",
    ">",
    "
",
    " at <Login",
    "ref="VTU_COMPONENT"",
    ">",
    "
",
    " at <VTUROOT>",
  ],
  [
    "[Vue warn]: (deprecation OPTIONS_BEFORE_DESTROY) \`beforeDestroy\` has been renamed to \`beforeUnmount\`.",
    "
",
    " at <BAlert",
    "class="fr-alert p-3 text-left"",
    "dismissible=false",
    "fade=true",
    " ...",
    ">",
    "
",
    " at <Alert",
    "show=false",
    "dismissible=false",
    "variant="error"",
    " ...",
    ">",
    "
",
    " at <BCardBody",
    "key=0",
    "tabindex="-1"",
    "id="callbacksPanel"",
    " ...",
    ">",
    "
",
    " at <BCard",
    "no-body=""",
    "class="border-xs-0 border-sm d-flex fr-stretch-card"",
    "header-tag="header"",
    " ...",
    ">",
    "
",
    " at <BContainer",
    "class="px-0 flex-grow-1 d-flex"",
    ">",
    "
",
    " at <CenterCard",
    "logo-alt-text="common.logo"",
    "logo-enabled=true",
    "logo-height="40"",
    " ...",
    ">",
    "
",
    " at <BCol",
    "lg=12",
    ">",
    "
",
    " at <BRow",
    "class="align-items-center m-0 flex-grow-1"",
    ">",
    "
",
    " at <BContainer",
    "class="flex-grow-1 d-flex"",
    ">",
    "
",
    " at <Login",
    "ref="VTU_COMPONENT"",
    ">",
    "
",
    " at <VTUROOT>",
  ],
  [
    "[Vue warn]: (deprecation GLOBAL_EXTEND) (5)",
    "
",
    " at <BAlert",
    "class="fr-alert p-3 text-left"",
    "dismissible=false",
    "fade=true",
    " ...",
    ">",
    "
",
    " at <Alert",
    "show=false",
    "dismissible=false",
    "variant="error"",
    " ...",
    ">",
    "
",
    " at <BCardBody",
    "key=0",
    "tabindex="-1"",
    "id="callbacksPanel"",
    " ...",
    ">",
    "
",
    " at <BCard",
    "no-body=""",
    "class="border-xs-0 border-sm d-flex fr-stretch-card"",
    "header-tag="header"",
    " ...",
    ">",
    "
",
    " at <BContainer",
    "class="px-0 flex-grow-1 d-flex"",
    ">",
    "
",
    " at <CenterCard",
    "logo-alt-text="common.logo"",
    "logo-enabled=true",
    "logo-height="40"",
    " ...",
    ">",
    "
",
    " at <BCol",
    "lg=12",
    ">",
    "
",
    " at <BRow",
    "class="align-items-center m-0 flex-grow-1"",
    ">",
    "
",
    " at <BContainer",
    "class="flex-grow-1 d-flex"",
    ">",
    "
",
    " at <Login",
    "ref="VTU_COMPONENT"",
    ">",
    "
",
    " at <VTUROOT>",
  ],
  [
    "[Vue warn]: (deprecation COMPONENT_FUNCTIONAL) (3)",
    "
",
    " at <BAlert",
    "class="fr-alert p-3 text-left"",
    "dismissible=false",
    "fade=true",
    " ...",
    ">",
    "
",
    " at <Alert",
    "show=false",
    "dismissible=false",
    "variant="error"",
    " ...",
    ">",
    "
",
    " at <BCardBody",
    "key=0",
    "tabindex="-1"",
    "id="callbacksPanel"",
    " ...",
    ">",
    "
",
    " at <BCard",
    "no-body=""",
    "class="border-xs-0 border-sm d-flex fr-stretch-card"",
    "header-tag="header"",
    " ...",
    ">",
    "
",
    " at <BContainer",
    "class="px-0 flex-grow-1 d-flex"",
    ">",
    "
",
    " at <CenterCard",
    "logo-alt-text="common.logo"",
    "logo-enabled=true",
    "logo-height="40"",
    " ...",
    ">",
    "
",
    " at <BCol",
    "lg=12",
    ">",
    "
",
    " at <BRow",
    "class="align-items-center m-0 flex-grow-1"",
    ">",
    "
",
    " at <BContainer",
    "class="flex-grow-1 d-flex"",
    ">",
    "
",
    " at <Login",
    "ref="VTU_COMPONENT"",
    ">",
    "
",
    " at <VTUROOT>",
  ],
  [
    "[Vue warn]: (deprecation INSTANCE_LISTENERS) (5)",
    "
",
    " at <BVTransition",
    "noFade=false",
    "title=""",
    "showIcon=true",
    " ...",
    ">",
    "
",
    " at <BAlert",
    "class="fr-alert p-3 text-left"",
    "dismissible=false",
    "fade=true",
    " ...",
    ">",
    "
",
    " at <Alert",
    "show=false",
    "dismissible=false",
    "variant="error"",
    " ...",
    ">",
    "
",
    " at <BCardBody",
    "key=0",
    "tabindex="-1"",
    "id="callbacksPanel"",
    " ...",
    ">",
    "
",
    " at <BCard",
    "no-body=""",
    "class="border-xs-0 border-sm d-flex fr-stretch-card"",
    "header-tag="header"",
    " ...",
    ">",
    "
",
    " at <BContainer",
    "class="px-0 flex-grow-1 d-flex"",
    ">",
    "
",
    " at <CenterCard",
    "logo-alt-text="common.logo"",
    "logo-enabled=true",
    "logo-height="40"",
    " ...",
    ">",
    "
",
    " at <BCol",
    "lg=12",
    ">",
    "
",
    " at <BRow",
    "class="align-items-center m-0 flex-grow-1"",
    ">",
    "
",
    " at <BContainer",
    "class="flex-grow-1 d-flex"",
    ">",
    "
",
    " at <Login",
    "ref="VTU_COMPONENT"",
    ">",
    "
",
    " at <VTUROOT>",
  ],
  [
    "[Vue warn]: (deprecation ATTR_FALSE_VALUE) Attribute "appear" with v-bind value \`false\` will render appear="false" instead of removing it in Vue 3. To remove the attribute, use \`null\` or \`undefined\` instead. If the usage is intended, you can disable the compat behavior and suppress this warning with:

  configureCompat({ ATTR_FALSE_VALUE: false })

  Details: https://v3-migration.vuejs.org/breaking-changes/attribute-coercion.html",
    "
",
    " at <Transition",
    "class="fr-alert p-3 text-left"",
    "style=",
    {},
    "title=""",
    " ...",
    ">",
    "
",
    " at <BVTransition",
    "noFade=false",
    "title=""",
    "showIcon=true",
    " ...",
    ">",
    "
",
    " at <BAlert",
    "class="fr-alert p-3 text-left"",
    "dismissible=false",
    "fade=true",
    " ...",
    ">",
    "
",
    " at <Alert",
    "show=false",
    "dismissible=false",
    "variant="error"",
    " ...",
    ">",
    "
",
    " at <BCardBody",
    "key=0",
    "tabindex="-1"",
    "id="callbacksPanel"",
    " ...",
    ">",
    "
",
    " at <BCard",
    "no-body=""",
    "class="border-xs-0 border-sm d-flex fr-stretch-card"",
    "header-tag="header"",
    " ...",
    ">",
    "
",
    " at <BContainer",
    "class="px-0 flex-grow-1 d-flex"",
    ">",
    "
",
    " at <CenterCard",
    "logo-alt-text="common.logo"",
    "logo-enabled=true",
    "logo-height="40"",
    " ...",
    ">",
    "
",
    " at <BCol",
    "lg=12",
    ">",
    "
",
    " at <BRow",
    "class="align-items-center m-0 flex-grow-1"",
    ">",
    "
",
    " at <BContainer",
    "class="flex-grow-1 d-flex"",
    ">",
    "
",
    " at <Login",
    "ref="VTU_COMPONENT"",
    ">",
    "
",
    " at <VTUROOT>",
  ],
  [
    "[Vue warn]: (deprecation ATTR_FALSE_VALUE) Attribute "persisted" with v-bind value \`false\` will render persisted="false" instead of removing it in Vue 3. To remove the attribute, use \`null\` or \`undefined\` instead. If the usage is intended, you can disable the compat behavior and suppress this warning with:

  configureCompat({ ATTR_FALSE_VALUE: false })

  Details: https://v3-migration.vuejs.org/breaking-changes/attribute-coercion.html",
    "
",
    " at <Transition",
    "class="fr-alert p-3 text-left"",
    "style=",
    {},
    "title=""",
    " ...",
    ">",
    "
",
    " at <BVTransition",
    "noFade=false",
    "title=""",
    "showIcon=true",
    " ...",
    ">",
    "
",
    " at <BAlert",
    "class="fr-alert p-3 text-left"",
    "dismissible=false",
    "fade=true",
    " ...",
    ">",
    "
",
    " at <Alert",
    "show=false",
    "dismissible=false",
    "variant="error"",
    " ...",
    ">",
    "
",
    " at <BCardBody",
    "key=0",
    "tabindex="-1"",
    "id="callbacksPanel"",
    " ...",
    ">",
    "
",
    " at <BCard",
    "no-body=""",
    "class="border-xs-0 border-sm d-flex fr-stretch-card"",
    "header-tag="header"",
    " ...",
    ">",
    "
",
    " at <BContainer",
    "class="px-0 flex-grow-1 d-flex"",
    ">",
    "
",
    " at <CenterCard",
    "logo-alt-text="common.logo"",
    "logo-enabled=true",
    "logo-height="40"",
    " ...",
    ">",
    "
",
    " at <BCol",
    "lg=12",
    ">",
    "
",
    " at <BRow",
    "class="align-items-center m-0 flex-grow-1"",
    ">",
    "
",
    " at <BContainer",
    "class="flex-grow-1 d-flex"",
    ">",
    "
",
    " at <Login",
    "ref="VTU_COMPONENT"",
    ">",
    "
",
    " at <VTUROOT>",
  ],
]
`;

exports[`Component Test Loads login callback components with extra query parameters in the URL focuses on the first input if journeyFocusFirstFocusableItemEnabled is true: console-warn-snapshot 1`] = `
[
  [
    "[Vue warn]: (deprecation ATTR_FALSE_VALUE) Attribute "autofocus" with v-bind value \`false\` will render autofocus="false" instead of removing it in Vue 3. To remove the attribute, use \`null\` or \`undefined\` instead. If the usage is intended, you can disable the compat behavior and suppress this warning with:

  configureCompat({ ATTR_FALSE_VALUE: false })

  Details: https://v3-migration.vuejs.org/breaking-changes/attribute-coercion.html",
    "
",
    " at <FrPasswordCallback",
    "class="callback-component"",
    "callback=",
    PasswordCallback {
      "payload": {
        "_id": 1,
        "input": [
          {
            "name": "IDToken2",
            "value": "",
          },
        ],
        "output": [
          {
            "name": "prompt",
            "value": "Password",
          },
        ],
        "type": "PasswordCallback",
      },
    },
    "index=2",
    " ...",
    ">",
    "
",
    " at <BCardBody",
    "key=0",
    "tabindex="-1"",
    "id="callbacksPanel"",
    " ...",
    ">",
    "
",
    " at <BCard",
    "no-body=""",
    "class="border-xs-0 border-sm d-flex fr-stretch-card"",
    "header-tag="header"",
    " ...",
    ">",
    "
",
    " at <BContainer",
    "class="px-0 flex-grow-1 d-flex"",
    ">",
    "
",
    " at <CenterCard",
    "logo-alt-text="common.logo"",
    "logo-enabled=true",
    "logo-height="40"",
    " ...",
    ">",
    "
",
    " at <BCol",
    "lg=12",
    ">",
    "
",
    " at <BRow",
    "class="align-items-center m-0 flex-grow-1"",
    ">",
    "
",
    " at <BContainer",
    "class="flex-grow-1 d-flex"",
    ">",
    "
",
    " at <Login",
    "ref="VTU_COMPONENT"",
    "journeyFocusFirstFocusableItemEnabled=true",
    ">",
    "
",
    " at <VTUROOT>",
  ],
  [
    "[Vue warn]: (deprecation INSTANCE_LISTENERS) (6)",
    "
",
    " at <BButton",
    "type="submit"",
    "variant="primary"",
    "disabled=false",
    ">",
    "
",
    " at <BCardBody",
    "key=0",
    "tabindex="-1"",
    "id="callbacksPanel"",
    " ...",
    ">",
    "
",
    " at <BCard",
    "no-body=""",
    "class="border-xs-0 border-sm d-flex fr-stretch-card"",
    "header-tag="header"",
    " ...",
    ">",
    "
",
    " at <BContainer",
    "class="px-0 flex-grow-1 d-flex"",
    ">",
    "
",
    " at <CenterCard",
    "logo-alt-text="common.logo"",
    "logo-enabled=true",
    "logo-height="40"",
    " ...",
    ">",
    "
",
    " at <BCol",
    "lg=12",
    ">",
    "
",
    " at <BRow",
    "class="align-items-center m-0 flex-grow-1"",
    ">",
    "
",
    " at <BContainer",
    "class="flex-grow-1 d-flex"",
    ">",
    "
",
    " at <Login",
    "ref="VTU_COMPONENT"",
    "journeyFocusFirstFocusableItemEnabled=true",
    ">",
    "
",
    " at <VTUROOT>",
  ],
]
`;

exports[`Login.vue Removes undefined and "undefined" tree from stepParams: console-warn-snapshot 1`] = `
[
  [
    "[Vue warn]: (deprecation RENDER_FUNCTION) Vue 3's render function API has changed. You can opt-in to the new API with:

  configureCompat({ RENDER_FUNCTION: false })

  (This can also be done per-component via the "compatConfig" option.)
  Details: https://v3-migration.vuejs.org/breaking-changes/render-function-api.html",
    "
",
    " at <VTUROOT>",
  ],
  [
    "[Vue warn]: (deprecation GLOBAL_EXTEND) (2)",
    "
",
    " at <Login",
    "ref="VTU_COMPONENT"",
    ">",
    "
",
    " at <VTUROOT>",
  ],
  [
    "[Vue warn]: (deprecation ATTR_FALSE_VALUE) Attribute "fluid" with v-bind value \`false\` will render fluid="false" instead of removing it in Vue 3. To remove the attribute, use \`null\` or \`undefined\` instead. If the usage is intended, you can disable the compat behavior and suppress this warning with:

  configureCompat({ ATTR_FALSE_VALUE: false })

  Details: https://v3-migration.vuejs.org/breaking-changes/attribute-coercion.html",
    "
",
    " at <BContainer",
    "class="flex-grow-1 d-flex"",
    ">",
    "
",
    " at <Login",
    "ref="VTU_COMPONENT"",
    ">",
    "
",
    " at <VTUROOT>",
  ],
]
`;
